# rl-games

./: .gitignore  LICENSE  README.md  evaluation.csv  requirements.txt
alpha_zero/: analysis.ipynb  evaluate.py  evaluate.sh  train.py  train.sh
alpha_zero/eval/nim/: mlp-big.csv  mlp-mid.csv  random.csv
alpha_zero/eval/snakes/: cnn.csv  mlp-big.csv  mlp-mid.csv  random.csv
alpha_zero/eval/ttt/: cnn.csv  mlp-big.csv  mlp-mid.csv  random.csv
dqn/: dqn_train.py  evaluate.py  train.py
dqn/eval/nim/: loss.csv  rewards.csv
dqn/eval/snakes/: loss.csv  rewards.csv
dqn/eval/ttt/: loss.csv  rewards.csv
games/: README.md  pyproject.toml
games/games/: __init__.py
games/games/snakes/: README.md  __init__.py  _game.py  _interactive.py  _pyspiel.py  _sb3.py  _visualize.py
games/games/tic_tac_toe/: README.md  __init__.py  _game.py  _interactive.py  _pyspiel.py
games/tic_tac_toe/: README.md  __init__.py  _pyspiel.py
